[project]
name = "adaptive-rag-financial-regulations"
version = "0.1.0"
description = "Adaptive RAG application for financial regulations and banking intelligence using LangGraph, FAISS, Groq LLMs, and Tavily Search."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "streamlit",
    "python-dotenv",
    "pandas",
    "yfinance",
    "langchain",
    "langchain-core",
    "langchain-community",
    "langchain-text-splitters",
    "langchain-huggingface",
    "langchain-groq",
    "langgraph",
    "faiss-cpu",
    "sentence-transformers",
    "pypdf",
    "tavily-python"
]